--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Заглушка для сайта на HTML5</title>
+		<title>easycan.ru</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Eric Bayguzin</h1>
+						<h1>Easy Can</h1>
 						<p>Web-разработка &nbsp;&bull;&nbsp; Seo продвижение &nbsp;&bull;&nbsp; Написание статей</p>
 						<nav>
 							<ul>
@@ -45,7 +45,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Bayguzin.ru. <a href="#" target="_blank">Free Html5 Templates</a> by <a href="#">HTML5 UP</a>.</span>
+						<span class="copyright">&copy; easycan.ru.</span>
 					</footer>
 				
 			</div>
