--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; easycan.ru.</span>
+						<span class="copyright">&copy; easycan.ru</span>
 					</footer>
 				
 			</div>
