--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Easy Can</h1>
-						<p>Web-разработка &nbsp;&bull;&nbsp; Seo продвижение &nbsp;&bull;&nbsp; Написание статей</p>
+						<p style="font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";">Web-разработка &nbsp;&bull;&nbsp; Seo продвижение &nbsp;&bull;&nbsp; Написание статей</p>
 						<nav>
 							<ul>
 								<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
