--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
 						<p style="font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";">Web-разработка &nbsp;&bull;&nbsp; Seo продвижение &nbsp;&bull;&nbsp; Написание статей</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
+								<li><a href="#" class="fa fa-vk"><span>Vk.com</span></a></li>
 								<li><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
-								<li><a href="#" class="fa fa-dribbble"><span>Dribbble</span></a></li>
 								<li><a href="#" class="fa fa-github"><span>Github</span></a></li>
 								<li><a href="#" class="fa fa-envelope-o"><span>Email</span></a></li>
 							</ul>
