--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; easycan.ru</span>
+						<span class="copyright" style="font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";>&copy; easycan.ru</span>
 					</footer>
 				
 			</div>
