--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<ul>
 								<li><a href="#" class="fa fa-vk"><span>Vk.com</span></a></li>
 								<li><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
-								<li><a href="#" class="fa fa-telegram" aria-hidden="true"><span>Telegram</span></a></li>
+								<li><a href="#" class="fa fa-telegram"><span>Telegram</span></a></li>
 								<li><a href="#" class="fa fa-envelope-o"><span>Email</span></a></li>
 							</ul>
 						</nav>
